--- a/projects/01_fyyur/starter_code/templates/forms/edit_venue.html
+++ b/projects/01_fyyur/starter_code/templates/forms/edit_venue.html
@@ -33,9 +33,25 @@
         {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true) }}
       </div>
       <div class="form-group">
-          <label for="genres">Facebook Link</label>
-          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
-        </div>
+        <label for="genres">Web site</label>
+        {{ form.website(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
+     </div>
+     <div class="form-group">
+         <label for="genres">Facebook Link</label>
+         {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
+     </div>
+     <div class="form-group">
+         <label for="genres">Image Link</label>
+         {{ form.image_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
+     </div>
+     <div class="form-group">
+         <label for="genres">Seeking talent</label>
+         {{ form.seeking_talent(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
+     </div>
+     <div class="form-group">
+         <label for="genres">Seeking description</label>
+         {{ form.seeking_description(class_ = 'form-control', placeholder='Seeking description', id=form.state, autofocus = true) }}
+     </div>
       <input type="submit" value="Edit Venue" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
