--- a/projects/02_trivia_api/starter/frontend/src/stylesheets/QuizView.css
+++ b/projects/02_trivia_api/starter/frontend/src/stylesheets/QuizView.css
@@ -3,6 +3,7 @@
     margin-left: 10%;
     text-align: center;
     margin-top: 40px;
+    color: white;
 }
 
 .category-holder {
@@ -10,22 +11,43 @@
     font-size: 24px;
 }
 
+.play-category {
+    margin: 5px;
+    border-radius: 4px;
+    background-color: rgb(49, 45, 133);
+    padding: 5px 25px 5px 15px;
+    color:white;
+}
+
+.play-category:hover {
+    border-left: 3px solid #E65392;
+    background-color: #5993E6;
+    padding: 5px 22px 5px 15px;
+    cursor: pointer;
+    /* color: #E65392; */
+}
+
 .choose-header {
     font-size: 34px;
     font-weight: bold;
 }
 
-.play-category:hover {
-    color: dodgerblue;
-}
 
 .button {
-    width: 100px;
+    width: auto;
+    max-width: 120px;
+    text-align: center;
     margin-top: 5px;
-    background-color: dodgerblue;
+    background-color: #E65392;
     color: white;
-    padding: 3px 5px;
+    padding: 5px 20px;
     align-self: center;
+    border: none;
+    border-radius: 4px;
+}
+
+.button:hover {
+    cursor: pointer;
 }
 
 div.button {
